<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/searchBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/CBC_btn1" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/CBC_btn2" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/CBC_btn3" />

    <ListView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

       />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="bottom"
        android:visibility="invisible" />




</LinearLayout>
